--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,31 @@
 asgiref==3.7.2
+astroid==2.15.5
+black==23.3.0
+cachetools==5.3.1
+chardet==5.1.0
+click==8.1.3
+colorama==0.4.6
+distlib==0.3.6
 Django==4.2.2
+filelock==3.12.0
+flake8==6.0.0
+flake8-builtins==2.1.0
+flake8-django==1.3
+flake8-import-order==0.18.2
+flake8-print==5.0.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.1
+platformdirs==3.5.1
+pluggy==1.0.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pyproject_api==1.5.1
 sqlparse==0.4.4
+tomli==2.0.1
+tox==4.6.0
 typing_extensions==4.6.3
+virtualenv==20.23.0
+wrapt==1.15.0
