fixed gitHub actions

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands = flake8 {posargs}
 
 [flake8]
 exclude =
-    # github
+    # Used for version control system, no need to testing
     .git,
     # cache
     __pycache__,
