testing CI with black: expected fail

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps = -r requirements.txt
 [testenv: tests]
 commands = python manage.py test
 
-[testenv-black]
+[testenv: black]
 commands = black --line-length 120 --extend-exclude='/(migrations)' --check --diff .
 
 [testenv: pep8]
