--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands = flake8 {posargs}
 exclude =
     # Used for version control system, no need to testing
     .git,
-    # cache
+    # We don't need to test Python cache
     __pycache__,
     # venv
     .venv,
