--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -1,6 +1,6 @@
 name: Django CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -21,8 +21,3 @@ jobs:
 
     - name: Run tox
       run: tox
-
-
-
-
-
