--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.3
 colorama==0.4.6
 distlib==0.3.6
 Django==4.2.2
+Faker==18.10.1
 filelock==3.12.0
 flake8==6.0.0
 flake8-builtins==2.1.0
@@ -23,6 +24,8 @@ pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pyproject_api==1.5.1
+python-dateutil==2.8.2
+six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tox==4.6.0
