--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ flake8-builtins==2.1.0
 flake8-django==1.3
 flake8-import-order==0.18.2
 flake8-print==5.0.0
+jsonfield==3.1.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -24,6 +25,7 @@ platformdirs==3.5.1
 pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
+pygraphviz==1.11
 pyproject_api==1.5.1
 python-dateutil==2.8.2
 six==1.16.0
