added django debug toolbar updated configuration for tox

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,12 @@ skipsdist = true
 deps = -r requirements.txt
 
 [testenv: tests]
+setenv = DEBUG=False
+deps =
+    django-debug-toolbar
+    django_extensions
 commands = python manage.py test
+
 
 [testenv: black]
 commands = black --line-length 120 --extend-exclude='/(migrations)' --check --diff .
