--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
+amqp==5.1.1
+appnope==0.1.3
 asgiref==3.7.2
 astroid==2.15.5
+asttokens==2.2.1
+async-timeout==4.0.2
+backcall==0.2.0
+billiard==4.1.0
 black==23.3.0
 cachetools==5.3.1
+celery==5.3.1
 chardet==5.1.0
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
+decorator==5.1.1
 distlib==0.3.6
 Django==4.2.2
+django-celery-results==2.5.1
+django-debug-toolbar==4.1.0
 django-extensions==3.2.3
+executing==1.2.0
 Faker==18.10.1
 filelock==3.12.0
 flake8==6.0.0
@@ -15,24 +29,41 @@ flake8-builtins==2.1.0
 flake8-django==1.3
 flake8-import-order==0.18.2
 flake8-print==5.0.0
+ipython==8.14.0
+jedi==0.18.2
 jsonfield==3.1.0
+kombu==5.3.1
 lazy-object-proxy==1.9.0
+matplotlib-inline==0.1.6
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.1
+parso==0.8.3
 pathspec==0.11.1
+pexpect==4.8.0
+pickleshare==0.7.5
 platformdirs==3.5.1
 pluggy==1.0.0
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycodestyle==2.10.0
 pyflakes==3.0.1
+Pygments==2.15.1
 pyproject_api==1.5.1
 python-dateutil==2.8.2
+redis==4.6.0
 six==1.16.0
 sqlparse==0.4.4
+stack-data==0.6.2
 style==1.1.0
 tomli==2.0.1
 tox==4.6.0
+traitlets==5.9.0
 typing_extensions==4.6.3
+tzdata==2023.3
 update==0.0.1
+vine==5.0.0
 virtualenv==20.23.0
+wcwidth==0.2.6
 wrapt==1.15.0
