fixed pep8, black warnings

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ setenv = DEBUG=False
 deps =
     django-debug-toolbar
     django_extensions
+    django_celery_results
 commands = python manage.py test
 
 
