--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ astroid==2.15.5
 asttokens==2.2.1
 async-timeout==4.0.2
 backcall==0.2.0
+beautifulsoup4==4.12.2
 billiard==4.1.0
 black==23.3.0
 cachetools==5.3.1
 celery==5.3.1
+certifi==2023.5.7
 chardet==5.1.0
+charset-normalizer==3.2.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -29,6 +32,7 @@ flake8-builtins==2.1.0
 flake8-django==1.3
 flake8-import-order==0.18.2
 flake8-print==5.0.0
+idna==3.4
 ipython==8.14.0
 jedi==0.18.2
 jsonfield==3.1.0
@@ -42,6 +46,7 @@ parso==0.8.3
 pathspec==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
+pipdeptree==2.9.5
 platformdirs==3.5.1
 pluggy==1.0.0
 prompt-toolkit==3.0.39
@@ -53,7 +58,9 @@ Pygments==2.15.1
 pyproject_api==1.5.1
 python-dateutil==2.8.2
 redis==4.6.0
+requests==2.31.0
 six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
 stack-data==0.6.2
 style==1.1.0
@@ -63,6 +70,7 @@ traitlets==5.9.0
 typing_extensions==4.6.3
 tzdata==2023.3
 update==0.0.1
+urllib3==2.0.3
 vine==5.0.0
 virtualenv==20.23.0
 wcwidth==0.2.6
